// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match component state without any permission 1`] = `
<div>
  <div
    class="channel-intro "
    id="channelIntro"
  >
    <h2
      class="channel-intro__title"
    >
      Beginning of test channel
    </h2>
    <p
      class="channel-intro__content"
    >
      <span>
        <strong>
          Welcome to test channel!
        </strong>
        \\n \\nPost messages here that you want everyone to see. Everyone automatically becomes a permanent member of this channel when they join the team.
      </span>
    </p>
    <br />
  </div>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match component state, readonly 1`] = `
<div>
  <div
    class="channel-intro "
    id="channelIntro"
  >
    <h2
      class="channel-intro__title"
    >
      Beginning of test channel
    </h2>
    <p
      class="channel-intro__content"
    >
      <span>
        <strong>
          Welcome to test channel!
        </strong>
        \\n \\nMessages can only be posted by system admins. Everyone automatically becomes a permanent member of this channel when they join the team.
      </span>
    </p>
    <br />
  </div>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match snapshot, with enable, group constrained 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <FormattedMarkdownMessage
      defaultMessage="**Welcome to {display_name}!**\\\\n \\\\nPost messages here that you want everyone to see. Everyone automatically becomes a permanent member of this channel when they join the team."
      id="intro_messages.default"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Connect(TeamPermissionGate)
    permissions={
      Array [
        "invite_user",
      ]
    }
    teamId="team-id"
  >
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <ToggleModalButton
        className="intro-links color--link"
        dialogProps={
          Object {
            "channel": Object {
              "create_at": 1508265709607,
              "creator_id": "creator_id",
              "delete_at": 0,
              "display_name": "test channel",
              "header": "test",
              "id": "channel_id",
              "last_post_at": 1508265709635,
              "name": "town-square",
              "purpose": "test",
              "team_id": "team-id",
              "type": "O",
              "update_at": 1508265709607,
            },
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        modalId="add_groups_to_team"
      >
        <i
          className="fa fa-user-plus"
        />
        <MemoizedFormattedMessage
          defaultMessage="Add other groups to this team"
          id="intro_messages.addGroupsToTeam"
        />
      </ToggleModalButton>
    </Connect(TeamPermissionGate)>
  </Connect(TeamPermissionGate)>
  <Connect(PluggableIntroButtons)
    channel={
      Object {
        "create_at": 1508265709607,
        "creator_id": "creator_id",
        "delete_at": 0,
        "display_name": "test channel",
        "header": "test",
        "id": "channel_id",
        "last_post_at": 1508265709635,
        "name": "town-square",
        "purpose": "test",
        "team_id": "team-id",
        "type": "O",
        "update_at": 1508265709607,
      }
    }
  />
  <Connect(Component)
    channelId="channel_id"
    permissions={
      Array [
        "manage_public_channel_properties",
      ]
    }
    teamId="team-id"
  >
    <ToggleModalButton
      ariaLabel="Set a Header"
      className="intro-links color--link channelIntroButton"
      dialogProps={
        Object {
          "channel": Object {
            "create_at": 1508265709607,
            "creator_id": "creator_id",
            "delete_at": 0,
            "display_name": "test channel",
            "header": "test",
            "id": "channel_id",
            "last_post_at": 1508265709635,
            "name": "town-square",
            "purpose": "test",
            "team_id": "team-id",
            "type": "O",
            "update_at": 1508265709607,
          },
        }
      }
      dialogType={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "type": [Function],
        }
      }
      modalId="edit_channel_header"
    >
      <EditIcon />
      <MemoizedFormattedMessage
        defaultMessage="Set a Header"
        id="intro_messages.setHeader"
      />
    </ToggleModalButton>
  </Connect(Component)>
  <br />
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match snapshot, with enableUserCreation 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <FormattedMarkdownMessage
      defaultMessage="**Welcome to {display_name}!**\\\\n \\\\nPost messages here that you want everyone to see. Everyone automatically becomes a permanent member of this channel when they join the team."
      id="intro_messages.default"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Connect(TeamPermissionGate)
    permissions={
      Array [
        "invite_user",
      ]
    }
    teamId="team-id"
  >
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Memo(AddMembersButton)
        channel={
          Object {
            "create_at": 1508265709607,
            "creator_id": "creator_id",
            "delete_at": 0,
            "display_name": "test channel",
            "header": "test",
            "id": "channel_id",
            "last_post_at": 1508265709635,
            "name": "town-square",
            "purpose": "test",
            "team_id": "team-id",
            "type": "O",
            "update_at": 1508265709607,
          }
        }
        pluginButtons={
          <Memo(Connect(PluggableIntroButtons))
            channel={
              Object {
                "create_at": 1508265709607,
                "creator_id": "creator_id",
                "delete_at": 0,
                "display_name": "test channel",
                "header": "test",
                "id": "channel_id",
                "last_post_at": 1508265709635,
                "name": "town-square",
                "purpose": "test",
                "team_id": "team-id",
                "type": "O",
                "update_at": 1508265709607,
              }
            }
          />
        }
        setHeader={
          <Memo(Connect(Component))
            channelId="channel_id"
            permissions={
              Array [
                "manage_public_channel_properties",
              ]
            }
            teamId="team-id"
          >
            <ToggleModalButton
              ariaLabel="Set a Header"
              className="intro-links color--link channelIntroButton"
              dialogProps={
                Object {
                  "channel": Object {
                    "create_at": 1508265709607,
                    "creator_id": "creator_id",
                    "delete_at": 0,
                    "display_name": "test channel",
                    "header": "test",
                    "id": "channel_id",
                    "last_post_at": 1508265709635,
                    "name": "town-square",
                    "purpose": "test",
                    "team_id": "team-id",
                    "type": "O",
                    "update_at": 1508265709607,
                  },
                }
              }
              dialogType={
                Object {
                  "$$typeof": Symbol(react.memo),
                  "WrappedComponent": [Function],
                  "compare": null,
                  "type": [Function],
                }
              }
              modalId="edit_channel_header"
            >
              <EditIcon />
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Set a Header"
                id="intro_messages.setHeader"
              />
            </ToggleModalButton>
          </Memo(Connect(Component))>
        }
        usersLimit={10}
      />
    </Connect(TeamPermissionGate)>
  </Connect(TeamPermissionGate)>
  <br />
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DIRECT Channel should match component state, with teammate 1`] = `
<div>
  <div
    class="channel-intro "
    id="channelIntro"
  >
    <div
      class="post-profile-img__container channel-intro-img"
    >
      <span
        class="status-wrapper  "
      >
        <button
          class="RoundButton-dvlhqG ehgqHL style--none"
        >
          <span
            class="profile-icon "
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xl"
              loading="lazy"
              src="/api/v4/users/user1/image?_=0"
              tabindex="-1"
            />
          </span>
        </button>
      </span>
    </div>
    <div
      class="channel-intro-profile d-flex"
    >
      <button
        aria-label="someone"
        class="user-popover style--none"
      >
        Someone
      </button>
    </div>
    <p
      class="channel-intro-text"
    >
      <span>
        This is the start of your direct message history with my teammate.\\nDirect messages and files shared here are not shown to people outside this area.
      </span>
    </p>
    <button
      aria-label="Set a Header dialog"
      class="style--none intro-links color--link channelIntroButton"
    >
      <i
        class="icon-pencil-outline"
        title="Edit Icon"
      />
      Set a Header
    </button>
  </div>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DIRECT Channel should match component state, without teammate 1`] = `
<div>
  <div
    class="channel-intro "
    id="channelIntro"
  >
    <p
      class="channel-intro-text"
    >
      This is the start of your direct message history with this teammate. Direct messages and files shared here are not shown to people outside this area.
    </p>
  </div>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test Group Channel should match component state, no profiles 1`] = `
<div>
  <div
    class="channel-intro "
    id="channelIntro"
  >
    <p
      class="channel-intro-text"
    >
      This is the start of your group message history with these teammates. Messages and files shared here are not shown to people outside this area.
    </p>
  </div>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test Group Channel should match component state, with profiles 1`] = `
<div>
  <div
    class="channel-intro "
    id="channelIntro"
  >
    <div
      class="post-profile-img__container channel-intro-img"
    >
      <span
        class="status-wrapper  "
      >
        <button
          class="RoundButton-dvlhqG ehgqHL style--none"
        >
          <span
            class="profile-icon "
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xl"
              loading="lazy"
              src="/api/v4/users/user1/image?_=0"
              tabindex="-1"
            />
          </span>
        </button>
      </span>
      <span
        class="status-wrapper  "
      >
        <button
          class="RoundButton-dvlhqG ehgqHL style--none"
        >
          <span
            class="profile-icon "
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xl"
              loading="lazy"
              src="/api/v4/users/guest1/image?_=0"
              tabindex="-1"
            />
          </span>
        </button>
      </span>
    </div>
    <p
      class="channel-intro-text"
    >
      <span>
        This is the start of your group message history with test channel.\\nMessages and files shared here are not shown to people outside this area.
      </span>
    </p>
    <button
      aria-label="Set a Header dialog"
      class="style--none intro-links color--link channelIntroButton"
    >
      <i
        class="icon-pencil-outline"
        title="Edit Icon"
      />
      Set a Header
    </button>
  </div>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test OFFTOPIC Channel should match component state 1`] = `
<div>
  <div
    class="channel-intro "
    id="channelIntro"
  >
    <h2
      class="channel-intro__title"
    >
      Beginning of test channel
    </h2>
    <p
      class="channel-intro__content"
    >
      This is the start of test channel, a channel for non-work-related conversations.
    </p>
    <span
      class="LoadingSpinner"
      data-testid="loadingSpinner"
      id="loadingSpinner"
    >
      <span
        class="fa fa-spinner fa-fw fa-pulse spinner"
        title="Loading Icon"
      />
    </span>
  </div>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test Open Channel should match component state, without boards 1`] = `
<div>
  <div
    class="channel-intro "
    id="channelIntro"
  >
    <h2
      class="channel-intro__title"
    >
      Beginning of test channel
    </h2>
    <p
      class="channel-intro__content"
    >
      <span>
        This is the start of the test channel channel, created by creatorName on 
        October 17, 2017
        .
      </span>
       Any member can join and read this channel.
      <span>
         This channel's purpose is: test
      </span>
      <br />
    </p>
    <span
      class="LoadingSpinner"
      data-testid="loadingSpinner"
      id="loadingSpinner"
    >
      <span
        class="fa fa-spinner fa-fw fa-pulse spinner"
        title="Loading Icon"
      />
    </span>
  </div>
</div>
`;
